# xpressr

./: .gitignore  buttons.jsonc  format.sh  meson.build
.github/workflows/: main.yml
daemon/: meson.build
daemon/data/: com.github.jeysonflores.xpressrService.service
daemon/src/: XpressrService.cpp
daemon/src/Adaptors/: Regex.h  Regex.xml  RegexAdaptor.h
daemon/src/Interfaces/: Regex.cpp  Regex.h  RegexInterface.cpp  RegexInterface.h
daemon/src/Services/: DataManager.cpp  DataManager.h
daemon/src/Utils/: Logger.cpp  Logger.h
daemon/tests/: client.py  get_regexes_test.py
daemon/tests/vala/: get_regexes_test.vala  xmake.lua
data/: assets.gresource.xml  meson.build  style-dark.css  style.css
meson/: post_install.py
src/: MainWindow.vala  Xpressr.vala
src/Interfaces/: Regex.vala
src/Models/: Regex.vala
src/Views/: InputView.vala  ListView.vala
src/Widgets/: HeaderBar.vala  RegexItem.vala  RegexItemMenu.vala
